Version 2.5.1, released February xxth, 2004
===========================================

- Avoid last '\0' in flush_return_buffer()
- Added CSV output
- During synchronization, display link to received entries
- Implemented calendar
- Added entry counter
- Added form validation via JavaScript
- Changed "entry date" to "entry time"
- Changed "Date format" to "Time format"
- Implemented "Type <attrib> = date"

Version 2.5.0, released January 28th, 2004
==========================================

- Implemented mirroring, see new section in config.html
- Updated all translation files with current set of required stings
- Search 'all logbooks' only for current top group
- Changed 'message' to 'entry' consistently
- Removed '{n}' in quick filter and find page list
- Display months on find page localized
- Implemented setlocale() for strftime()

Version 2.4.1, released January 13th, 2004
==========================================

- Added "top text" option
- "Bottom text" and "Top text" are displayed now on ALL pages
- Only section of current logbook can be edited in elogd.cfg, this
  makes it possible to declar different administrators for different
  logbooks
- Added "top group" option to have completely separated logbook
  groups without having to run multiple elogd servers in parallel
- Added logging for SMTP communication (for debugging)
- Added "last submission" option
- Evaluate configuration options after conditional attributes change
- Implemented expansion of logbook selection page
- Fixed bug that text disappeared after upload
- Admin users can edit "[global <top group>]" and "[global]" sections
- User names in configuration page selection box are now sorted

Version 2.4.0, released January 5th, 2004
=========================================

- Renames "Display search" to "List display"
- Fixed various HTML errors
- Increased timeout in SMTP conversation
- Create password file if not existing
- User cannot change login name if already existing